--- a/deploy/configs/atalanta_config.yaml
+++ b/deploy/configs/atalanta_config.yaml
@@ -1,6 +1,6 @@
 rabbitmq:
   url: "amqp://guest:guest@rabbitmq:5672/"
-  delivery_queue: "delivery-data"
+  delivery_queue: "processor-data"
   fare_queue: "fares-data"
 
 service:
