--- a/deploy/configs/hermes_config.yaml
+++ b/deploy/configs/hermes_config.yaml
@@ -1,6 +1,6 @@
 rabbitmq:
   url: "amqp://guest:guest@rabbitmq:5672/"
-  queue: "delivery-data"
+  queue: "processor-data"
 
 csv:
   file_path: "./data/delivery_data.csv"
